Redux saga and Refractor some more code. This took some hours

--- a/public/index.html
+++ b/public/index.html
@@ -43,3 +43,17 @@
     -->
   </body>
 </html>
+
+<!-- 
+"icons": [
+{
+  "src": "logo192.png",
+  "type": "image/png",
+  "sizes": "192x192"
+},
+{
+  "src": "logo512.png",
+  "type": "image/png",
+  "sizes": "512x512"
+} for adding icons to site  use in manifest.json
+], -->
